Changed type VariationalParameter to DeterminantalParameters (Hamiltonian.jl)
Changed instances of variational_parameters to determinantal_parameters, as the latter is more accurate. variational_parameters for here on will only be 
      used to refer to determinantal_parameters+jastrow_parameters (Hamiltonian.jl, run_simulation.jl)
Added num_detpars to definition of DeterminantalParameters (Hamiltonian.jl)
Created method to find total number of variational_parameters get_num_vpars() (Utilities.jl)
Updated get_SR_comatrix() and get_SR_forces() methods (StochasticReconfiguration.jl)


Change log (02/12):
Changed the name of functions get_SR_matrix(), get_SR_forces(), and parameter_update!() to get_sr_matrix(), get_sr_forces(), and sr_update!(), respectively (StochasticReconfiguration.jl)
Updated definition of measure_local_energy() to properly loop over nearest neighbors of particle β (Measurements.jl
Moved derivative measurements to Measurements.jl, as they make more sense there
Changed local_determinantal_derivative() and local_jastrow_derivative() to measure_local_detpar_derivative() and measure_local_jpar_derivative(), respectively (Measurements.jl)


Change log (02/26):
Updated Jastrow type and add function map_jpars(), to more easily track Jastrow parameters (Jastrow.jl)


Change log (04/22):
Updated some function defintiions in Jastrow.jl
Updated some measurement schemes in Measurements.jl
Created src directory
Created test directory

Change log (04/23):
Begin adding unit tests for each module
Fixed bug in get_particle_numbers() where ndn was being calculated incorrectly

Change log (04/24):
Added initialize_measurement_container() and initialize_measurements!() to Measurements.jl
Updated definitions of measure_local_energy() and get_jastrow_ratio()
Updated do_particle_hop!() into a mutating function
Minor definitional update to update_particle_posistions!()
Updated local_update!() to local_fermion_update!()